[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Actors/Actor.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://sprites/Ui/chest.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Player/Player_Animation.tres" type="SpriteFrames" id=4]
[ext_resource path="res://Scenes/Player/Player_collision.tres" type="Shape2D" id=5]

[sub_resource type="Animation" id=1]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2 ), Vector2( 0, 0 ), Vector2( 0, -2 ), Vector2( 0, -1.5 ) ]
}

[sub_resource type="TileSet" id=2]
0/name = "chest.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="Player" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="CollisionShape2D" parent="." index="0"]
shape = ExtResource( 5 )

[node name="AnimatedSprite" parent="." index="1"]
frames = ExtResource( 4 )
animation = "Idle"

[node name="RayCast2D" parent="." index="3"]
collide_with_areas = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="4"]
anims/Walk = SubResource( 1 )

[node name="CaseOverlay" type="TileMap" parent="." index="5"]
position = Vector2( -32, -32 )
tile_set = SubResource( 2 )
format = 1

[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
